# morph-server

./: Cargo.toml
assets/: chunk.wgsl
schema/: blocks.json
src/: assets.rs  lib.rs  math.rs  mesher.rs  player.rs
src/chunks/: blocks.rs  generate.rs  mod.rs
