[package]
name = "spacetime-module"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
fastnoise-lite = "1.1.1"
include_directory = "*"
spacetimedb = "1.3.0"
bevy_tasks = "0.16.*"
bevy_math = "0.16.*"
fastrand = "2.3.0"
serde_json = "1"
log = "0.4"